wax kabdal yar oo aan ku sameeyay links iyo nav-menu links ka

--- a/contact.html
+++ b/contact.html
@@ -75,19 +75,19 @@
                 <div class="col">
                     <div class="footer-text">
                         <h1 class="footer-title">Services 📌</h1>
-                        <small>Soft Food 🍔</small>
-                        <small>Cofee ☕</small>
-                        <small>Juice 🥤</small>
-                        <small>Tea 🍵</small>
+                        <small> <a class="footer-links" href="#">Soft Food 🍔</a></small>
+                        <small> <a class="footer-links" href="#">Cofee ☕</a></small>
+                        <small> <a class="footer-links" href="#">Juice 🥤</a></small>
+                        <small> <a class="footer-links" href="#">Tea 🍵</a></small>
                     </div>
                 </div>
                 <div class="col">
                     <div class="footer-text">
                         <h1 class="footer-title">Contact Us ☎</h1>
-                        <small>Facebook</small>
-                        <small>Instagram</small>
-                        <small>Whatsapp</small>
-                        <small>Twitter</small>
+                        <small><a class="footer-links" href="https://www.facebook.com">Facebook</a></small>
+                        <small><a class="footer-links" href="https://www.instagram.com">Instagram</a></small>
+                        <small><a class="footer-links" href="https://www.whatsapp.com">Whatsapp</a></small>
+                        <small><a class="footer-links" href="https://www.twitter.com">Twitter</a></small>
                     </div>
                 </div>
                 
